--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,6 +1,10 @@
 <h1>Hi There</h1>
 <tweets></tweets>
 <switch-demo></switch-demo>
+<hr/>
+{{post.title}}
+<br/>
+{{post.body | summary:50}}
 <!-- <favorites [isFavorite]="post.isFavorite" (change)="onFavoriteChange($event)"></favorites>
 <i class="glyphicon glyphicon-star"></i>
 <likes [liked]="tweets.tweetLiked" [noOfLikes]="tweets.totalLikes"></likes>
