Added usage of ngClass directive

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -5,8 +5,8 @@
 {{post.title}}
 <br/>
 {{post.body | summary:50}}
-<!-- <favorites [isFavorite]="post.isFavorite" (change)="onFavoriteChange($event)"></favorites>
-<i class="glyphicon glyphicon-star"></i>
+<favorites [isFavorite]="post.isFavorite" (change)="onFavoriteChange($event)"></favorites>
+<!-- <i class="glyphicon glyphicon-star"></i>
 <likes [liked]="tweets.tweetLiked" [noOfLikes]="tweets.totalLikes"></likes>
 <votes (vote)='onVote($event)'></votes>
 <courses></courses>
