Implemented zippy component, started with forms

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,7 +1,15 @@
 <h1>Hi There</h1>
-<tweets></tweets>
-<switch-demo></switch-demo>
+<!--<tweets></tweets>
+<switch-demo></switch-demo>-->
 <hr/>
+<zippy title="Amstelveen">
+    Amstelveen Gemeente
+</zippy>
+<zippy title="Amsterdam">
+    Amsterdam Gemeente
+</zippy>
+<hr/>
+<contact-form></contact-form>
 {{post.title}}
 <br/>
 {{post.body | summary:50}}
