--- a/app/contact/contact-form.template.html
+++ b/app/contact/contact-form.template.html
@@ -1,7 +1,11 @@
 <form>
     <div class="form-group">
         <label for="firstName">First Name</label>
-        <input ngControl="firstName" #firstName="ngForm" (change)="log(firstName)" id="firstName" type="text" class="form-control" />
+        <input ngControl="firstName" #firstName="ngForm" id="firstName"
+               type="text" class="form-control" required />
+        <div *ngIf="firstName.valid" class="alert alert-danger">
+            Firt Name is required
+        </div>
     </div>
     <div class="form-group">
         <label for="comment">Comment</label>
