Completed contact form and added subscribe form

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -2,14 +2,18 @@
 <!--<tweets></tweets>
 <switch-demo></switch-demo>-->
 <hr/>
-<zippy title="Amstelveen">
+
+<!-- <zippy title="Amstelveen">
     Amstelveen Gemeente
 </zippy>
 <zippy title="Amsterdam">
     Amsterdam Gemeente
-</zippy>
+</zippy> -->
+
+<!-- <hr/>
+<contact-form></contact-form> -->
 <hr/>
-<contact-form></contact-form>
+<subscribe-form></subscribe-form>
 {{post.title}}
 <br/>
 {{post.body | summary:50}}
