--- a/app/contact/contact-form.template.html
+++ b/app/contact/contact-form.template.html
@@ -1,15 +1,26 @@
-<form>
+<form #f="ngForm" (ngSubmit)="onSuibmit(f.form)">
     <div class="form-group">
         <label for="firstName">First Name</label>
         <input ngControl="firstName" #firstName="ngForm" id="firstName"
-               type="text" class="form-control" required />
-        <div *ngIf="firstName.valid" class="alert alert-danger">
-            Firt Name is required
-        </div>
+               type="text" class="form-control" required minlength="3" />
+       <div *ngIf="firstName.touched && firstName.errors">
+           <div *ngIf="firstName.errors.required" class="alert alert-danger">
+               Firt Name is required
+           </div>
+           <div class="alert alert-danger" *ngIf="firstName.errors.minlength">
+               First name should be minimum {{ firstName.errors.minlength.requiredLength }} characters.
+           </div>
+       </div>
     </div>
     <div class="form-group">
         <label for="comment">Comment</label>
-        <textarea ngControl="comment" id="comment" cols="20" rows="10" class="form-control"></textarea>
+        <textarea #comment="ngForm" ngControl="comment" id="comment"
+                    cols="30" rows="10" class="form-control" required></textarea>
+        <div *ngIf="comment.touched && comment.errors">
+            <div *ngIf="comment.errors.required" class="alert alert-danger">
+                Comment is required
+            </div>
+        </div>
     </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
 </form>
