Added model driven form, custom validator. Next is validator with promise

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -12,8 +12,11 @@
 
 <!-- <hr/>
 <contact-form></contact-form> -->
-<hr/>
+<!-- <hr/>
 <subscribe-form></subscribe-form>
+<hr/>-->
+<signup-form></signup-form>
+<hr />
 {{post.title}}
 <br/>
 {{post.body | summary:50}}
