--- a/app/signup/signup-form.template.html
+++ b/app/signup/signup-form.template.html
@@ -2,6 +2,9 @@
     <div class="form-group">
         <label for="username">Username</label>
         <input id="username"  type="text" class="form-control" ngControl="username" #username="ngForm" />
+        <div *ngIf="username.control.pending">
+            Checking for uniqueness...
+        </div>
         <div *ngIf="username.touched && username.errors">
             <div class="alert alert-danger" *ngIf="username.errors.required">
                 Username is required.
