Trying to migrate to new forms as ngControl is deprecated since RC 2. Still WIP and need to figure out how exactly template driven forms will work with new forms and then later model forms as well.

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,28 +1,7 @@
 <h1>Hi There</h1>
-<!--<tweets></tweets>
-<switch-demo></switch-demo>-->
-<hr/>
-
-<!-- <zippy title="Amstelveen">
-    Amstelveen Gemeente
-</zippy>
-<zippy title="Amsterdam">
-    Amsterdam Gemeente
-</zippy> -->
-
-<!-- <hr/>
-<contact-form></contact-form> -->
-<!-- <hr/>
-<subscribe-form></subscribe-form>
-<hr/>-->
-<signup-form></signup-form>
+<contact-form></contact-form>
 <hr />
 {{post.title}}
 <br/>
 {{post.body | summary:50}}
 <favorites [isFavorite]="post.isFavorite" (change)="onFavoriteChange($event)"></favorites>
-<!-- <i class="glyphicon glyphicon-star"></i>
-<likes [liked]="tweets.tweetLiked" [noOfLikes]="tweets.totalLikes"></likes>
-<votes (vote)='onVote($event)'></votes>
-<courses></courses>
-<authors></authors> -->
