Migrated contact form to new form as of rc2

--- a/app/app.template.html
+++ b/app/app.template.html
@@ -1,5 +1,6 @@
 <h1>Hi There</h1>
-<contact-form></contact-form>
+<!--<contact-form></contact-form>-->
+<subscribe-form></subscribe-form>
 <hr />
 {{post.title}}
 <br/>
