--- a/app/subscribe/subscribe-form.template.html
+++ b/app/subscribe/subscribe-form.template.html
@@ -1,7 +1,8 @@
 <form #f="ngForm" (submit)="onSubmit(f.form)">
     <div class="form-group">
         <label for="name">Name</label>
-        <input id="name" #name="ngForm" ngControl="name" type="text" class="form-control" required minlength="3" />
+        <input id="name" name="name" #name="ngModel" [(ngModel)]="model.name" type="text" class="form-control" required
+               minlength="3"/>
         <div *ngIf="name.touched && name.errors">
             <div *ngIf="name.errors.required" class="alert alert-danger">
                 Name is required.
@@ -13,7 +14,8 @@
     </div>
     <div class="form-group">
         <label for="email">Email</label>
-        <input id="email" #email="ngForm" ngControl="email" type="text" class="form-control" required />
+        <input id="email" name="email" #email="ngModel" [(ngModel)]="model.email" type="text" class="form-control"
+               required/>
         <div *ngIf="email.touched && email.errors">
             <div *ngIf="email.errors.required" class="alert alert-danger">
                 Email is required.
@@ -22,7 +24,8 @@
     </div>
     <div>
         <label for="frequecyOfEmails">Frequency of Emails</label>
-        <select id="frequecyOfEmails" #frequecyOfEmails="ngForm" ngControl="frequecyOfEmails" class="form-control" required>
+        <select id="frequecyOfEmails" name="frequecyOfEmails" #frequecyOfEmails="ngModel"
+                [(ngModel)]="model.frequecyOfEmails" class="form-control" required>
             <option *ngFor="let freq of emailFrequencyOptions" value="{{ freq }}">{{ freq }}</option>
         </select>
         <div *ngIf="frequecyOfEmails.touched && frequecyOfEmails.errors">
@@ -31,5 +34,6 @@
             </div>
         </div>
     </div>
-    <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
+    <br/>
+    <button class="btn btn-primary" type="submit" [disabled]="!f.form.valid">Submit</button>
 </form>
